--- a/data_folder_example/plain_text_resume.yaml
+++ b/data_folder_example/plain_text_resume.yaml
@@ -114,7 +114,7 @@ self_identification:
   ethnicity: "Asian"
 
 legal_authorization:
-  eu_work_authorization: "Yes"
+  eu_work_authorization: "No"
   us_work_authorization: "Yes"
   requires_us_visa: "No"
   requires_us_sponsorship: "Yes"
@@ -133,7 +133,7 @@ legal_authorization:
 
 
 work_preferences:
-  remote_work: "Yes"
+  remote_work: "No"
   in_person_work: "Yes"
   open_to_relocation: "Yes"
   willing_to_complete_assessments: "Yes"
